--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -1601,7 +1601,7 @@ msgid "Please try again or send a problem report."
 msgstr ""
 
 msgctxt "split-tunneling-view"
-msgid "To use split tunneling you first need to enable full disk access permissions."
+msgid "To use split tunneling please enable “Full disk access” for “Mullvad VPN” in the macOS system settings."
 msgstr ""
 
 #. Error message showed in a dialog when an application fails to launch.
